feat: 完成 Owner-only 本地 Dogfood 技术准备